--- a/css/main.scss
+++ b/css/main.scss
@@ -16,7 +16,7 @@ $spacing-unit:     30px;
 
 $text-color:       #111;
 $background-color: #FFFFFF;
-$brand-color:      #457BFF;
+$brand-color:      #48BDDA;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
