Added Disqus (for real this time)

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,8 @@ layout: default
     {{ content }}
   </div>
 
-  {% if post.comments %}
+  <div class="disqus-comments">
+  {% if page.comments %}
     <div id="disqus_thread"></div>
     <script>
     /**
@@ -25,6 +26,8 @@ layout: default
     this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
     };
     */
+    var disqus_developer = 1;
+
     (function() { // DON'T EDIT BELOW THIS LINE
     var d = document, s = d.createElement('script');
 
@@ -35,7 +38,9 @@ layout: default
     })();
     </script>
     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+
   {% endif %}
+</div>
 
 </article>
 
