Made changes to the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
           &nbsp;&nbsp;
           <a href="https://ca.linkedin.com/in/doriakeung"><img src="/images/linkedin.png"></a>
           &nbsp;&nbsp;
-          <a href=""><img src="/images/github.png"></a>
+          <a href="http://github.com/doriable"><img src="/images/github.png"></a>
          </p>
   	</div>
 
