Week 2 post and minor layout changes

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -208,7 +208,7 @@
 .right {
     width: 60%;
     height: 90%;
-    margin: 0px;
+    margin-bottom: 500px;
     float: right;
     position: relative;
 }
