--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -12,29 +12,6 @@
     background-color: #FFFFFF;
 }
 
-.footer-heading {
-    font-size: 18px;
-    margin-bottom: $spacing-unit / 2;
-}
-
-.contact-list,
-.social-media-list {
-    list-style: none;
-    margin-left: 0;
-}
-
-.footer-col-wrapper {
-    font-size: 15px;
-    color: $grey-color;
-    @extend %clearfix;
-}
-
-.footer-col {
-    float: left;
-    margin-bottom: $spacing-unit / 2;
-    padding-left: $spacing-unit / 2;
-}
-
 .footer-col-1 {
     width: -webkit-calc(40% - (#{$spacing-unit} / 2));
     width:         calc(40% - (#{$spacing-unit} / 2));
@@ -45,46 +22,15 @@
     font-size: 14px;
 }
 
-.footer-col-2 {
-    width: -webkit-calc(40% - (#{$spacing-unit} / 2));
-    width:         calc(40% - (#{$spacing-unit} / 2));
-    text-align: right;
-    padding: 5px 0px 5px 20px;
-    height: 10%;
-    display: inline-block;
-}
-
-.footer-col-3 {
-    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
-    width:         calc(45% - (#{$spacing-unit} / 2));
-}
-
-@include media-query($on-laptop) {
-    .footer-col-1,
-    .footer-col-2 {
-        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
-        width:         calc(50% - (#{$spacing-unit} / 2));
-    }
-
-    .footer-col-3 {
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
-    }
-}
-
-@include media-query($on-palm) {
-    .footer-col {
-        float: none;
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
-    }
-}
 
 #footer-name {
     line-height: 2;
     font-size: 10px;
 }
 
+#social-media-small {
+    display: none;
+}
 
 
 /**
@@ -131,6 +77,49 @@
 
 .home {
     padding: 5% 20% 0 5%;
+}
+
+.left-sidebar {
+    width: 40%;
+    height: 90%;
+    position: fixed;
+    background-image: url("/images/new_wallpaper-01-02.png");
+    margin-top: 0px;
+    padding: 0px;
+    float: left;
+}
+
+#about {
+    margin: 15% auto;
+    padding: 1em;
+    background: white;
+    border-radius: 70%;
+    width: 70%;
+    display: block;
+}
+
+.right {
+    width: 60%;
+    height: 90%;
+    margin-bottom: 5em;
+    float: right;
+    position: relative;
+}
+
+#arrow-large {
+    font-size: 100px;
+    text-align: center;
+    line-height: -1;
+    margin: -30px 0px 0px 0px;
+}
+
+#arrow-small {
+    display: none;
+    text-align: center;
+}
+
+.disqus-comments {
+    margin: 0 10% 15% 5%;
 }
 
 
@@ -182,63 +171,14 @@
 }
 
 /**
- * Other Things
+ * Media Queries - Mobile
  */
-
-.left-sidebar {
-    width: 40%;
-    height: 90%;
-    position: fixed;
-    background-image: url("/images/new_wallpaper-01-02.png");
-    margin-top: 0px;
-    padding: 0px;
-    float: left;
-}
-
-#about {
-    margin: 15%;
-    padding: 30px 30px 30px;
-    background: white;
-    border-radius: 50%;
-    width: 60%;
-    position: absolute;
-    display: inline-block;
-}
-
-.right {
-    width: 60%;
-    height: 90%;
-    margin-bottom: 500px;
-    float: right;
-    position: relative;
-}
-
-#arrow-large {
-    font-size: 100px;
-    text-align: center;
-    line-height: -1;
-    margin: -30px 0px 0px 0px;
-}
-
-#arrow-small {
-    display: none;
-    text-align: center;
-}
-
-#social-media-small {
-    display: none;
-}
-
-.disqus-comments {
-    margin: 0 10% 15% 5%;
-}
-
 @include media-query($on-palm) {
     .left-sidebar {
         width: 100%;
         height: 100%;
         position: relative;
-        background-image: url("/images/new_wallpaper-01-02 copy.png");
+        background-image: url("/images/new_wallpaper-01-02_small.png");
     }
     #arrow-large {
         display: none;
@@ -261,11 +201,12 @@
         display: block;
     }
     #about {
-        margin-left: 10%; 
+        padding: 3em;
     }
     .right {
         width: 100%;
         position: relative;
+        margin-bottom: 10em;
     }
     .post-meta {
         font-size: $small-font-size;
