--- a/css/main.scss
+++ b/css/main.scss
@@ -7,9 +7,9 @@
 
 // Our variables
 $base-font-family: "Open Sans", Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
+$base-font-size:   1em;
 $base-font-weight: 400;
-$small-font-size:  14px;
+$small-font-size:  1em;
 $base-line-height: 1.5;
 
 $spacing-unit:     30px;
@@ -25,7 +25,7 @@ $grey-color-dark:  darken($grey-color, 25%);
 // Width of the content area
 $content-width:    800px;
 
-$on-palm:          600px;
+$on-palm:          768px;
 $on-laptop:        800px;
 
 
