Adjustments to the CSS on homepage.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -101,9 +101,8 @@
 .right {
     width: 60%;
     height: 90%;
-    margin-bottom: 5em;
+    padding-bottom: 20em;
     float: right;
-    position: relative;
 }
 
 #arrow-large {
