Fixed issues with tagging and tweaked CSS on homepage right screen margins

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -76,7 +76,7 @@
 }
 
 .home {
-    padding: 5% 20% 0 5%;
+    padding: 5% 20% 20% 5%;
 }
 
 .left-sidebar {
@@ -101,7 +101,7 @@
 .right {
     width: 60%;
     height: 90%;
-    padding-bottom: 20em;
+    padding-bottom: 20%;
     float: right;
 }
 
@@ -213,9 +213,6 @@
     }
     #post-page{
         padding: 0px 25px 0px 30px;
-    }
-    .home {
-        padding: 20px 20px 0px 20px;
     }
 
     .post-title {
