Implemented default Jekyll blog layout and added category and project pages. Category dropdowns in progress.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,26 +1,38 @@
 <footer class="site-footer">
 
-  	<div class="footer-col-1">
-        <p id="social-media-large">
-        	Want to chat?&nbsp;&nbsp;&nbsp;              
-          <a href="mailto:doria.keung@gmail.com?Subject=Hello"><img src="/images/email.png"></a>
-          &nbsp;&nbsp;
-          <a href="https://www.facebook.com/doria.keung"><img src="/images/facebook.png"></a>
-          &nbsp;&nbsp;
-          <a href="https://ca.linkedin.com/in/doriakeung"><img src="/images/linkedin.png"></a>
-          &nbsp;&nbsp;
-          <a href="http://github.com/doriable"><img src="/images/github.png"></a>
-         </p>
-        <p id="social-media-small">
-        	Want to chat?<br>            
-          <a href="mailto:doria.keung@gmail.com?Subject=Hello"><img src="/images/email.png"></a>
-          &nbsp;&nbsp;
-          <a href="https://www.facebook.com/doria.keung"><img src="/images/facebook.png"></a>
-          &nbsp;&nbsp;
-          <a href="https://ca.linkedin.com/in/doriakeung"><img src="/images/linkedin.png"></a>
-          &nbsp;&nbsp;
-          <a href="http://github.com/doriable"><img src="/images/github.png"></a>
-         </p>
-  	</div>
+  <div class="wrapper">
+
+    <h2 class="footer-heading">{{ site.title }}</h2>
+
+    <div class="footer-col-wrapper">
+      <div class="footer-col footer-col-1">
+        <ul class="contact-list">
+          <li>{{ site.title }}</li>
+          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-col footer-col-2">
+        <ul class="social-media-list">
+          {% if site.github_username %}
+          <li>
+            {% include icon-github.html username=site.github_username %}
+          </li>
+          {% endif %}
+
+          {% if site.twitter_username %}
+          <li>
+            {% include icon-twitter.html username=site.twitter_username %}
+          </li>
+          {% endif %}
+        </ul>
+      </div>
+
+      <div class="footer-col footer-col-3">
+        <p>{{ site.description }}</p>
+      </div>
+    </div>
+
+  </div>
 
 </footer>
