--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,18 +1,20 @@
 ---
-layout: default2
+layout: default
 ---
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-    <p id="post-page" class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
   </header>
 
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
 
-  <div class="disqus-comments">
+</article>
+
+<div class="disqus-comments">
   {% if page.comments %}
     <div id="disqus_thread"></div>
     <script>
@@ -41,5 +43,3 @@ layout: default2
 
   {% endif %}
 </div>
-
-</article>
