--- a/css/main.scss
+++ b/css/main.scss
@@ -6,17 +6,17 @@
 
 
 // Our variables
-$base-font-family: "Open Sans", Helvetica, Arial, sans-serif;
-$base-font-size:   1em;
+$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-size:   16px;
 $base-font-weight: 400;
-$small-font-size:  1em;
+$small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
 $text-color:       #111;
-$background-color: #FFFFFF;
-$brand-color:      #48BDDA;
+$background-color: #fdfdfd;
+$brand-color:      #2a7ae2;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
@@ -25,13 +25,13 @@ $grey-color-dark:  darken($grey-color, 25%);
 // Width of the content area
 $content-width:    800px;
 
-$on-palm:          768px;
+$on-palm:          600px;
 $on-laptop:        800px;
 
 
 
 // Use media queries like this:
-//@include media-query($on-palm) {
+// @include media-query($on-palm) {
 //     .wrapper {
 //         padding-right: $spacing-unit / 2;
 //         padding-left: $spacing-unit / 2;
