Updated the footer, added Twitter icon, tweaked home page.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,37 +2,26 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
     <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>
+      <div class="footer-col footer-col-1"><!--footer column 1-->
+        <p>
+          Hello, my name is Doria.<br>
+          Let's chat!
+        </p>
+      </div><!--footer column 1-->
 
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
+      <div class="footer-col footer-col-2"><!--footer column 2-->
+        <a href="mailto:doria.keung@gmail.com"><img src="/images/email.png" alt="email icon" width="17"></a>
+        <a href="https://twitter.com/doriaKeung"><img src="/images/twitter.svg" alt="twitter icon" width="17"></a>
+        <a href="https://www.facebook.com/doria.keung"><img src="/images/facebook.png" alt="facebook icon" width="17"></a>
+        <a href="https://github.com/doriable"><img src="/images/github.png" alt="github icon" width="17"></a>
+        <a href="https://www.linkedin.com/in/doriakeung"><img src="/images/linkedin.png" alt="linkedin icon" width="17"></a>
+      </div><!--footer column 2-->
 
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-        </ul>
-      </div>
+      <!-- <div class="footer-col footer-col-3">
+      </div>-->
+    </div><!--footer column wrapper-->
 
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
-      </div>
-    </div>
-
-  </div>
+  </div><!--wrapper-->
 
 </footer>
