New layout implemented. Branch merged successfully.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,26 +1,26 @@
 <footer class="site-footer">
 
-  	<div class="footer-col-1">
-        <p id="social-media-large">
-        	Want to chat?&nbsp;&nbsp;&nbsp;              
-          <a href="mailto:doria.keung@gmail.com?Subject=Hello"><img src="/images/email.png"></a>
-          &nbsp;&nbsp;
-          <a href="https://www.facebook.com/doria.keung"><img src="/images/facebook.png"></a>
-          &nbsp;&nbsp;
-          <a href="https://ca.linkedin.com/in/doriakeung"><img src="/images/linkedin.png"></a>
-          &nbsp;&nbsp;
-          <a href="http://github.com/doriable"><img src="/images/github.png"></a>
-         </p>
-        <p id="social-media-small">
-        	Want to chat?<br>            
-          <a href="mailto:doria.keung@gmail.com?Subject=Hello"><img src="/images/email.png"></a>
-          &nbsp;&nbsp;
-          <a href="https://www.facebook.com/doria.keung"><img src="/images/facebook.png"></a>
-          &nbsp;&nbsp;
-          <a href="https://ca.linkedin.com/in/doriakeung"><img src="/images/linkedin.png"></a>
-          &nbsp;&nbsp;
-          <a href="http://github.com/doriable"><img src="/images/github.png"></a>
-         </p>
-  	</div>
+  <div class="wrapper">
+
+    <div class="footer-col-wrapper">
+      <div class="footer-col footer-col-1"><!--footer column 1-->
+        <p>
+          Let's chat!<br>
+          <a href="mailto:{{ site.email }}"><img src="/images/email.png" alt="email icon" width="17"></a>
+          <a href="https://twitter.com/{{ site.twitter_username }}"><img src="/images/twitter.svg" alt="twitter icon" width="17"></a>
+          <a href="https://www.facebook.com/{{ site.facebook_username }}"><img src="/images/facebook.png" alt="facebook icon" width="17"></a>
+          <a href="https://github.com/{{ site.github_username }}"><img src="/images/github.png" alt="github icon" width="17"></a>
+          <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}"><img src="/images/linkedin.png" alt="linkedin icon" width="17"></a>
+        </p>
+      </div><!--footer column 1-->
+
+      <!--<div class="footer-col footer-col-2">
+      </div>-->
+
+      <!-- <div class="footer-col footer-col-3">
+      </div>-->
+    </div><!--footer column wrapper-->
+
+  </div><!--wrapper-->
 
 </footer>
